added user authentication, fixed 'roles' field size

--- a/src/main/resources/templates/modals/modal_delete_user.html
+++ b/src/main/resources/templates/modals/modal_delete_user.html
@@ -45,7 +45,7 @@
                                 </div>
 
                                 <label for="roleEditUser" class="form-label">Role</label>
-                                <select class="form-select mb-3" size="2" aria-label="size 2 select example"
+                                <select class="form-select mb-3" aria-label="size 2 select example"
                                         id="roleEditUser" name="roles">
                                 </select>
                             </div>
