--- a/src/main/resources/templates/new_user_table.html
+++ b/src/main/resources/templates/new_user_table.html
@@ -14,36 +14,35 @@
         <div class="col-4 offset-4 px-3">
 
             <form id="newUserForm" class="text-center fw-bold needs-validation"  th:object="${employee}" >
-                <input type="hidden" th:field="*{id}">
+
                 <div class="mb-3">
                     <label for="FirstName" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="FirstName" th:field="*{name}" required>
+                    <input type="text" class="form-control" id="FirstName" name="name" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="LastName" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="LastName" th:field="*{surName}" required>
+                    <input type="text" class="form-control" id="LastName" name="surName" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="age" class="form-label">Age</label>
-                    <input type="number" class="form-control" id="age" th:field="*{age}" required >
+                    <input type="number" class="form-control" id="age" name="age" required >
                 </div>
 
                 <div class="mb-3">
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" th:field="*{email}" required>
+                    <input type="email" class="form-control" id="email" name="email" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" th:field="*{passwordConfirm}" required>
-                    <input type="hidden" th:field="*{password}">
+                    <input type="password" class="form-control" id="password" name="passwordConfirm" required>
                 </div>
 
                 <label for="role" class="form-label">Role</label>
                 <select class="form-select mb-3" th:size="${roleSet.size()}"
-                        multiple aria-label="multiple select example" id="role" th:field="*{roles}" required>
+                        multiple aria-label="multiple select example" id="role" name="roles" required>
                     <option th:each="role : ${roleSet}"
                             th:value="${role.name}"
                             th:text="${role.name}">
