--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-    <div th:insert="header :: copy"></div>
+    <div th:insert="/fragments/header :: copy"></div>
 </header>
 
 <main>
